--- a/.env
+++ b/.env
@@ -28,12 +28,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_DRIVER = smtp
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=ee9c9544df2be5
-MAIL_PASSWORD=08969a5956962d
-MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=muhammadnurramadhan072@gmail.com
+MAIL_PASSWORD=dzsfpjsqltqkmtrl
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
